--- a/docs/_workshop.yml
+++ b/docs/_workshop.yml
@@ -18,7 +18,9 @@ modules:
   - cloudnative
   - extensions
   - panache
+  - openapi
   - messaging
   - kafka
   - monitoring
   - tracing
+  - security
