--- a/docs/_modules.yml
+++ b/docs/_modules.yml
@@ -31,3 +31,5 @@ modules:
     name: Tracing Quarkus Apps
   security:
     name: Securing Resources with Keycloak
+  extra:
+    name: Extra Credit
