--- a/files/stack.imagestream.yaml
+++ b/files/stack.imagestream.yaml
@@ -13,5 +13,5 @@ spec:
       version: "1.0"
     from:
       kind: DockerImage
-      name: docker.io/schtool/che-quarkus-odo:latest
+      name: docker.io/schtool/che-quarkus-workshop:0.27.0
     name: "1.0"
