--- a/docs/_workshop_m1.yml
+++ b/docs/_workshop_m1.yml
@@ -1,6 +1,6 @@
 ---
 id: quarkus-lab
-name: Quarkus Hands-on Lab (Lab Version 2020-05-29)
+name: Basic Quarkus Hands-on Lab (Version 2020-06-24)
 
 vars:
   ROUTE_SUBDOMAIN:
@@ -23,11 +23,3 @@ modules:
   - native
   - cloudnative
   - deploy
-  - extensions
-  - panache
-  - openapi
-  - messaging
-  - kafka
-  - monitoring
-  - tracing
-  - security
