Migrate yq sript v2 to yq v3 script format

--- a/setup/htpass.yaml
+++ b/setup/htpass.yaml
@@ -1,8 +1,10 @@
-spec.identityProviders[+]: 
-  name: htpassidp
-  type: HTPasswd
-  mappingMethod: claim 
-  htpasswd:
-    fileData:
-      name: workshop-user-secret
-
+- command: update
+  path: spec 
+  value:
+    identityProviders:
+      - name: htpassidp
+        type: HTPasswd
+        mappingMethod: claim 
+        htpasswd:
+          fileData:
+            name: workshop-user-secret
