--- a/docs/_workshop_m2.yml
+++ b/docs/_workshop_m2.yml
@@ -6,10 +6,10 @@ vars:
   ROUTE_SUBDOMAIN:
   MASTER_URL:
   CONSOLE_URL:
-  CHE_URL:
+  DS_URL:
   KEYCLOAK_URL:
-  CHE_USER_NAME: userNN
-  CHE_USER_PASSWORD: passNN
+  DS_USER_NAME: userNN
+  DS_USER_PASSWORD: passNN
   OPENSHIFT_USER_NAME: userNN
   OPENSHIFT_USER_PASSWORD: passNN
 
